--- a/exercise3/scenes/scene_angle.yaml
+++ b/exercise3/scenes/scene_angle.yaml
@@ -26,5 +26,6 @@ camera:
   direction:  [0, 0, 1]
   up:         [0, 1, 0]
   #horizontal_angle:  157.38014
+  distance: 1
   horizontal_angle:  157.38014
   vertical_angle:    157.38014
