added light parsing

--- a/exercise4/CMakeLists.txt
+++ b/exercise4/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(rtcpu ${YAMLCPP_LIBRARY})
 #cuda version
 cuda_add_executable(rtgpu src/main.cc src/parser.cc src/raytracer.cu src/ppm_writer.cc src/types.cc OPTIONS "-D__GPUVERSION__")
 set_target_properties(rtgpu PROPERTIES COMPILE_FLAGS "-D__GPUVERSION__")
+set_target_properties(rtgpu PROPERTIES LINKER_LANGUAGE C)
 target_link_libraries(rtgpu ${GLOG_LIBRARY})
 target_link_libraries(rtgpu ${GFLAGS_LIBRARY})
 target_link_libraries(rtgpu ${YAMLCPP_LIBRARY})
