--- a/exercise5/scenes/room.yaml
+++ b/exercise5/scenes/room.yaml
@@ -28,13 +28,13 @@ primitives:
   color: *orange
 
 #right wall
-- triangle: [[10, 0, 0], [10, 15, 0], [10, 0, 20]]
+- triangle: [[10, 0, 0], [10, 0, 20], [10, 15, 0]]
   color: *green
-- triangle: [[10, 15, 0], [10, 15, 20], [10, 0, 20]]
+- triangle: [[10, 15, 0], [10, 0, 20], [10, 15, 20]]
   color: *green
 
 #ceil wall
-- triangle: [[0, 15, 0], [0, 15, 20], [10, 15, 0]]
+- triangle: [[0, 15, 0], [10, 15, 0], [0, 15, 20]]
   color: *blue
 - triangle: [[10, 15, 0], [10, 15, 20], [0, 15, 20]]
   color: *blue
@@ -42,30 +42,32 @@ primitives:
 #floor wall
 - triangle: [[0, 0, 0], [0, 0, 20], [10, 0, 0]]
   color: *red
-- triangle: [[10, 0, 0], [10, 0, 20], [0, 0, 20]]
+- triangle: [[10, 0, 0], [0, 0, 20], [10, 0, 20]]
   color: *red
     
 #back wall
-- triangle: [[0, 15, 20], [0, 0, 20], [10, 0, 20]]
+- triangle: [[0, 15, 20], [10, 0, 20], [0, 0, 20]]
   color: *gray
 - triangle: [[10, 15, 20], [10, 0, 20], [0, 15, 20]]
   color: *gray
-#- triangle: [[5.1, 0.1, 1.1], [5.1, 3.1, 3.1], [8.1, -1, 5.1]]
-  #color: *red
-#- triangle: [[5.1, 0.1, 1.1], [5.1, 3.1, 3.1], [8.1, -1, 5.1]]
-  #color: *red
-#- triangle: [[50, 50, 5], [30, 30, 5], [20, 20, 5]]
-  #color: *green
-#- triangle: [[0, 5, 0], [0, 5, 0], [0, 5, 0]]
-  #color: [2, 12, 12]
-
+  
+#tetraeder
+- triangle: [[2, 1, 12], [5, 5, 10], [5, 2, 8]]
+  color: *red
+- triangle: [[5, 2, 8], [5, 5, 10], [8, 1, 12]]
+  color: *green
+- triangle: [[5, 2, 8], [8, 1, 12], [2, 1, 12]]
+  color: *blue
+  
 # point lights
 lights:
-- [5, 14, 10]
+#- [5, 14, 10]
+#- [5, 14, 15]
+- [5, 14, 5]
 
 # camera
 camera:
-  location:           [5, 5, -1]
+  location:           [5, 5, -5]
   direction:          [0, 0, 1]
   up:                 [0, 1, 0]
   distance:           1
