--- a/exercise7/CMakeLists.txt
+++ b/exercise7/CMakeLists.txt
@@ -18,15 +18,10 @@ include_directories(${OPENGL_INCLUDE_DIRS})
 find_package(OpenCL REQUIRED)
 include_directories(${OPENCL_INCLUDE_DIRS})
 
-
-if(APPLE)
-    include_directories(/System/Library/Frameworks)
-ENDIF(APPLE)
-
 include_directories("src")
 
 set(CPU_SRC 
-    src/mandelbrot.cc)
+    src/mandelbrot.cc src/ppm_writer.cc src/mainwindow.cc)
     
 #cpu version
 add_executable(mandelbrot ${CPU_SRC})
@@ -34,9 +29,3 @@ target_link_libraries(mandelbrot ${GLOG_LIBRARY})
 target_link_libraries(mandelbrot ${GLUT_LIBRARY})
 target_link_libraries(mandelbrot ${OPENGL_gl_LIBRARY})
 target_link_libraries(mandelbrot ${OPENCL_LIBRARIES})
-
-# common flags
-SET(CMAKE_CXX_FLAGS "-Wall -Wno-unknown-pragmas -Wno-long-long -Wno-variadic-macros")
-SET(CMAKE_CXX_FLAGS_RELEASE "-DNEXPENSIVE -O2 -g0")
-SET(CMAKE_CXX_FLAGS_DEBUG "-DWARNINGS -O0 -g3 -fno-inline")
-
